--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Verificador de Termos de Uso</title>
 </head>
 <body>
-    Teste
+    <h1>Verificador de Termos de Uso</h1>
+
+    <label for="termoUso">Cole o termo de uso aqui:</label>
+    <textarea name="termoUso" id="termoUso" onclick="limparTexto()" rows="10" cols="50"></textarea>
+
+    <button onclick="verificarTermo()">Verificar</button>
+
+    <h3>Resumo:</h3>
+    <div id="resumo"></div>
+
+    <script src="js/verificaTermo.js"></script>
 </body>
-<script src="js/main.js"></script>
 </html>
